[tool.poetry]
name = "fable-saga"
version = "0.6.0.post1.dev0+d728521"
description = "AI agents that turn skills into actions."
authors = ["Frank Carey <fcarey@gmail.com>"]
readme = "README.md"
packages = [{include = "fable_saga"}]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.1, <4"
python-socketio = "^5.9.0"
cattrs = "^23.1.2"
aiohttp = "^3.8.5"
langchain = {version = "^0.1.13"}
types-pyyaml = "^6.0.12.20240311"
numpy = "^1.24.4"

# Optional dependencies
langchain-openai = { version = "^0.1.1", optional = true }


[tool.poetry.extras]
openai = ["langchain-openai"]


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
# The only dependencies that should be added are
# dependencies used for running tests (e.g., pytest, freezegun, response).
pytest = "^7.3.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.9.0"
black = "^24.3.0"


[tool.poetry-dynamic-versioning]
enable = false
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | stubs
  )/
  | poetry.lock
  | pyproject.toml
)
'''
